# MRI_Quality_Control

./: MRI_Quality_Control.py  README.md
MRI_Quality_Control/: CMakeLists.txt
MRI_Quality_Control/MRI_Quality_Control/: CMakeLists.txt
MRI_Quality_Control/MRI_Quality_Control/Resources/UI/: MRI_Quality_Control.ui
